syntax = "proto3";

package Replica;
option go_package = "./Replica";

message bidReplicaRequest {
    int32 amount = 2;
}

message bidReplicaResponse {
    string ack = 1;
}

message Empty {

}

message resultReplicaResponse {
    int32 result = 1;
}

service Replica {
    rpc bid (bidReplicaRequest) returns (bidReplicaResponse){}
    rpc result (Empty) returns (resultReplicaResponse){}
}
